fix(ui): center align create account
cernter align create account

--- a/packages/ui/src/pages/SignIn/index.module.scss
+++ b/packages/ui/src/pages/SignIn/index.module.scss
@@ -19,6 +19,7 @@
 
   .createAccount {
     margin-top: _.unit(6);
+    text-align: center;
   }
 
   .placeHolder {
